changed tag to category, updated Swagger, added user to prod
